[package]
name = "onnx_batching"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
env_logger = "0.11.10"
lazy_static = "1.5.0"
log = "0.4.29"
ndarray = "0.17.2"
ort = "2.0.0-rc.12"
serde = {version="1.0.228", features=["derive"]}
tokio = {version="1.52.1", features=["full"]}
